err/buml.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/buml'...
Compiling './lib/python3.5/site-packages/buml/utilities.py'...
***   File "./lib/python3.5/site-packages/buml/utilities.py", line 2
    print "Warning: %s" % msgStr
                      ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/tests'...
Compiling './lib/python3.5/site-packages/tests/test-all.py'...
***   File "./lib/python3.5/site-packages/tests/test-all.py", line 75
    print "out : %s" % out
                   ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/tests/test-baseNodes.py'...
***   File "./lib/python3.5/site-packages/tests/test-baseNodes.py", line 13
    print n
          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/tests/test-bumlParser.py'...
***   File "./lib/python3.5/site-packages/tests/test-bumlParser.py", line 102
    print p._tagAttrSplit(s)
          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/tests/test-inlineMapper.py'...
***   File "./lib/python3.5/site-packages/tests/test-inlineMapper.py", line 31
    print '"%s"' % lnk[0][0].txt
               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/tests/test-inlineParser.py'...
***   File "./lib/python3.5/site-packages/tests/test-inlineParser.py", line 14
    print orderedSepStrs(l)
                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/tests/test-utilities.py'...
***   File "./lib/python3.5/site-packages/tests/test-utilities.py", line 27
    print "bud.nospam is not installed"
                                      ^
SyntaxError: Missing parentheses in call to 'print'

Listing './share'...
Listing './share/python-wheels'...
